# KT3-for-python

./: Makefile  README.md  pyproject.toml
contest/: main.py
tests/: test_solution.py
